# rust_error_handling

./: Cargo.toml  LICENSE  README.md  readme.md
src/: lib.rs  main.rs
src/api/: api.rs  mod.rs
src/core/: models.rs
src/domain/: domain.rs
src/outer/: handlers.rs
src/usecases/: mod.rs  usecases.rs
